Fixes to images on mobile

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -103,7 +103,6 @@
   }
 
   .columns div img {
-    display: block;
-    margin: auto;
+    justify-self: center;
   }
 }
