--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -223,7 +223,7 @@ div p {
   }
 
   .images {
-    max-width: 400px;
+    max-width: 300px;
   }
 
 }
